<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- String for app calm -->
    <string name="enjoy_your_own">Enjoy your own way \n of life</string>
    <string name="next">NEXT</string>
    <string name="stories_sleeps">Stories sleep</string>
    <string name="relax_meditation">Relax meditation</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="sleep_well"><font size="24">Sleep well with the\n</font><font size="28">relaxing music</font></string>

    <string name="melody_will_help"><font size="24">Melody will help\n</font><font size="28">change your life</font></string>
    <string name="con_tinue">CONTINUE</string>
    <string name="time_bg">Time background</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="number_picker_formatter">%d</string>
    <string name="time_reminder">Time reminder</string>
    <string name="settings">Settings</string>
    <string name="minutes">Minutes</string>
    <string name="go_to_bed">Go to bed</string>
    <string name="time_reminder_default">10:30 pm</string>
    <string name="download_song">Download this song ...</string>


    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">Calm</string>
    <string name="navigation_drawer_header_title" translatable="false">Sunflower</string>

    <!-- Translatable resources -->
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
    <string name="plant_detail_image_content_description" translation_description="Content description for the header / hero image that is show at the top of the plant detail screen.">Image of plant</string>
    <string name="my_garden_title" translation_description="Title for the 'My garden' screen where the user can see the list of plants that have been added to their garden.">My garden</string>
    <string name="plant_list_title" translation_description="Title for the plant list screen where the user can see a list of plants available to add to their garden.">Plant list</string>
    <string name="plant_details_title" translation_description="Title for the plant details screen where the user can see the details for a specific plant.">Plant details</string>
    <string name="navigation_drawer_header_content_description" translation_description="Content description for the image that is shown at the top of the navigation drawer.">Navigation drawer header logo</string>
    <string name="added_plant_to_garden" translation_description="Confirmation text that is shown when a user adds a plant to their graden.">Added plant to garden</string>
    <string name="garden_empty" translation_description="Text that is shown on the 'My Garden' screen when no plants have been added to the user's garden">Your garden is empty</string>
    <string name="planted_date" translation_description="Text with placeholders that indicates when the plant was planted. Example: 'Sunflower planted on May 24, 2018'.">%1$s planted on %2$s</string>
    <string name="menu_item_share_plant" translation_description="The label for the Share menu item">Share</string>
    <string name="share_text_plant" translation_description="The default messaged used when sharing a plant on SNS, etc.">Check out the %s plant in the Android Sunflower app</string>

    <!-- String plurals and their related prefix / suffix strings -->
    <string name="watering_needs_prefix" translation_description="Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.">Watering needs:</string>
    <plurals name="watering_needs_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how often a plant should be watered, singular. Used in combination with watering_needs_prefix: 'Watering needs: every day'.">every day</item>
        <item quantity="other" translation_description="Suffix for the text describing how often a plant should be watered, plural. Used in combination with watering_needs_prefix: 'Watering needs: every 8 days'.">every %d days</item>
    </plurals>

    <string name="watering_next_prefix" translation_description="Prefix for the text indicating when the plant should next be watered. Used in combination with watering_next_suffix.">Last watered on %s</string>
    <plurals name="watering_next_suffix">
        <item quantity="one" translation_description="Suffix for the text indicating when the the plant should next be watered, singular. Used in combination with watering_next_prefix: 'Last watered on May 24, 2018 - water tomorrow.'.">water tomorrow.</item>
        <item quantity="other" translation_description="Suffix for the text indicating when the the plant should next be watered, plural. Used in combination with watering_next_prefix: 'Last watered on May 24, 2018 - water in 8 days.'.">water in %d days.</item>
    </plurals>

    <!-- Accessibility -->
    <string name="a11y_plant_item_image" translation_description="Accessibility text for each of the plant images shown in the 'My garden' and 'Plant list' screens.">Picture of plant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>-->
    <string name="see_all"><u>See all</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
