<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vgr_dialog_weight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_dialog"
        android:minWidth="326dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/time_bg"
            android:textColor="@color/colorDialog"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:np_dividerColor="@color/colorDialog"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_height="180dp"
                    app:np_max="120"
                    app:np_min="1"
                    app:np_selectedTextColor="@color/colorBlack"
                    app:np_selectedTextSize="24sp"
                    app:np_textColor="#bdbdbd"
                    app:np_textSize="16sp"
                    app:np_value="3"
                    app:np_width="64dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_dialog_btn"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/lnl_btn_dialog_weight_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="#4527a0"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lnl_btn_dialog_weight_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
