<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_settings"
        tools:context=".ui.setting.SettingFragment">

        <RelativeLayout
            android:id="@+id/tb_fr_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true">

            <com.melodymediation.sleepstories.ui.view.ImageClickAnimView
                android:id="@+id/img_back_settings"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/settings"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tb_fr_settings"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnl_btnl_time_bg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_line_settings"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/time_bg"
                    android:textColor="@color/colorTabSelect"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_time_bg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="5"
                    android:gravity="center|end"
                    android:text="30 minutes"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_btnl_time_reminder"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_line_settings"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/time_reminder"
                    android:textColor="@color/colorTabSelect"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_time_reminder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="5"
                    android:gravity="center|end"
                    android:text="10:30 pm"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</layout>
